fixed button sharp on mobile Safari

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
     border-radius: 20px;
     z-index: 100;
     transition: 0.3s;
+    padding: 0;
 }
 #infoBotton:hover {
     scale: 1.2;
@@ -129,6 +130,7 @@ body {
     border-radius: 20px;
     z-index: 100;
     transition: 0.3s;
+    padding: 0;
 }
 #settingsBotton:hover{
     scale: 1.2;
@@ -155,6 +157,7 @@ body {
     margin: auto 5px;
     transition: 0.3s;
     cursor: pointer;
+    padding: 0;
 }
 .colorGreen {
     width: 20px;
@@ -165,6 +168,7 @@ body {
     margin: auto 5px;
     transition: 0.3s;
     cursor: pointer;
+    padding: 0;
 }
 .colorBlue {
     width: 20px;
@@ -175,6 +179,7 @@ body {
     margin: auto 5px;
     transition: 0.3s;
     cursor: pointer;
+    padding: 0;
 }
 .colorActive {
     scale: 1.4;
